--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "license": "MIT",
     "dependencies": {
         "axios": "^0.15.3",
+        "flyio": "^0.6.0",
+        "i": "^0.3.6",
         "knex": "^0.13.0",
         "koa": "^2.0.0",
         "koa-bodyparser": "^3.2.0",
         "koa-log4": "^2.1.0",
         "koa-router": "^7.0.1",
+        "koa-sendfile": "^2.0.0",
         "lodash": "^4.17.4",
         "mkdir-p": "0.0.7",
         "mysql": "^2.14.1",
         "pify": "^2.3.0",
-        "wafer-node-sdk": "^1.1.1"
+        "wafer-node-sdk": "^1.4.0"
     },
     "devDependencies": {
         "babel-eslint": "^7.1.0",
